--- a/Project.toml
+++ b/Project.toml
@@ -7,16 +7,20 @@ version = "0.1.5"
 LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
 Random = "9a3f8284-a2c9-5f02-9a11-845980a1fd5c"
 RecipesBase = "3cdcf5f2-1ef4-517c-9805-6587b60abb01"
+Requires = "ae029012-a4dd-5104-9daa-d747884805df"
 StaticArrays = "90137ffa-7385-5640-81b9-e52037218182"
 
 [compat]
-RecipesBase = "0.6"
-StaticArrays = "0.10"
+LazySets = "1.28"
+RecipesBase = "0.6, 0.7, 0.8"
+Requires = "0.5, 1.0"
+StaticArrays = "0.10, 0.11, 0.12"
 julia = "1.1"
 
 [extras]
 GeometryTypes = "4d00f742-c7ba-57c2-abde-4428a4b178cb"
+LazySets = "b4f0291d-fe17-52bc-9479-3d1a343d9043"
 Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
 
 [targets]
-test = ["GeometryTypes", "Test"]
+test = ["LazySets", "GeometryTypes", "Test"]
