--- a/Project.toml
+++ b/Project.toml
@@ -1,7 +1,7 @@
 name = "ConvexBodyProximityQueries"
 uuid = "e9983d58-8b29-5530-8046-db49618142f9"
 authors = ["Arun Lakshmanan <lakshma2@illinois.edu>"]
-version = "0.1.6"
+version = "0.1.7"
 
 [deps]
 LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
@@ -12,7 +12,7 @@ StaticArrays = "90137ffa-7385-5640-81b9-e52037218182"
 
 [compat]
 LazySets = "1.30"
-RecipesBase = "0.6, 0.7, 0.8"
+RecipesBase = "0.6, 0.7, 0.8, 1.0"
 Requires = "0.5, 1.0"
 StaticArrays = "0.10, 0.11, 0.12"
 julia = "1"
