--- a/.travis.yml
+++ b/.travis.yml
@@ -18,4 +18,4 @@ notifications:
 
 after_success:
   # push coverage results to Codecov
-  - julia -e 'using Pkg; cd(Pkg.dir("ConvexBodyProximityQueries")); Pkg.add("Coverage"); using Coverage; Codecov.submit(Codecov.process_folder())'
+  - julia -e 'using Pkg; Pkg.add("Coverage"); using Coverage; Codecov.submit(process_folder())'
